--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,3 +33,9 @@ markdown_extensions:
       guess_lang: true
   - toc:
       permalink: true              
+extra:
+  disqus: torvare4  
+  social:
+    - icon: fontawesome/brands/github-alt
+      link: https://github.com/torvare4 
+            
