--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,11 @@ markdown_extensions:
       guess_lang: true
   - toc:
       permalink: true              
+nav:
+  - README.md
+  - ...
+  #- themes
+  - about.md
 extra:
   disqus: torvare4  
   social:
